# BoldClub

./: README.md
services/api/: .env.example  README.md  boldclub_test.db  pyproject.toml
services/api/app/: __init__.py  api.py  main.py
services/api/app/core/: __init__.py  config.py  dependencies.py  security.py
services/api/app/db/: base.py  session.py
services/api/app/integrations/gemini/: __init__.py  client.py
services/api/app/integrations/identity/: __init__.py  providers.py
services/api/app/integrations/media/: __init__.py  cloudinary.py
services/api/app/integrations/openai/: __init__.py  client.py
services/api/app/integrations/otp/: __init__.py  service.py
services/api/app/models/: __init__.py  auth_session.py  otp_challenge.py  profile.py  profile_media.py  user.py  user_embedding.py
services/api/app/modules/account/: README.md  __init__.py  router.py  schemas.py  service.py
services/api/app/modules/auth/: README.md  router.py  schemas.py  service.py
services/api/app/modules/chat/: router.py
services/api/app/modules/compatibility/: __init__.py  router.py
services/api/app/modules/discovery/: router.py
services/api/app/modules/matches/: router.py
services/api/app/modules/matching/: __init__.py  service.py
services/api/app/modules/onboarding/: README.md  router.py  (+2 more)
services/api/app/repositories/: __init__.py  auth_repository.py  profile_repository.py
services/api/app/schemas/: bootstrap.py
services/api/boldclub_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: conftest.py  test_auth_and_onboarding.py
(+88 files in other folders)
